@@ -3,7 +3,7 @@ use warnings;
 
 use English;
 use Error::Pure::Utils qw(clean);
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 6;
 use Test::NoWarnings;
 use Mo::utils qw(check_length);
 
@@ -30,3 +30,10 @@ is($ret, undef, 'Right length of value is present (foo and 4).');
 $self = {};
 $ret = check_length($self, 'key', 4);
 is($ret, undef, 'Right length of value is present (key not exists).');
+
+# Test.
+$self = {
+	'key' => undef,
+};
+$ret = check_length($self, 'key', 4);
+is($ret, undef, 'Right length of value is present (undef value).');
