@@ -1,5 +1,6 @@
 0.05
  - Fix existing of key in check_length().
+ - Fix undefined value in check_length().
 
 0.04 2021-10-19T12:59:57+02:00
  - Add check_length().
